# market_modeling

./: .gitignore  analysis.ipynb  pyproject.toml
.claude/: settings.local.json
.claude/commands/: analyze-article.md  analyze-code.md  analyze-review.md  analyze-spec.md
article/: note_dirichlet_S.md  output.md  output_dirichlet.md  output_dmnbd.md
dev/: prompt.md  spec.md  spec_401k.md  spec_dmnbd.md
src/: analysis.ipynb  analysis_401k.ipynb  dirichlet_multinomial.ipynb  dmnbd.ipynb  negative_binomial.ipynb
