[project]
name = "jupyter-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
